fix: scrollbar style

--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,18 @@
     --bgAlmeida: #000;
     --bgSombra: #8d8c8c;
 }
-
+::-webkit-scrollbar {
+    width: 10px; /* Largura da barra de rolagem */
+    height: 10px; /* Altura da barra de rolagem horizontal */
+  }
 /* trilho */
 ::-webkit-scrollbar-track {
-    background: #5b5a5a;
+    background: #000000;
 }
 
 /* thumb, parte que arrasta) */
 ::-webkit-scrollbar-thumb {
-    background-color: #181818;
+    background-color: var(--bgSombra);
 }
 
 /* 
